--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,13 @@
 <resources>
     <string name="app_name">Aimybirds</string>
-    <string name="start">Start</string>
+    <string name="start">Start mission</string>
     <string name="scenario_start">Hello! Press start.</string>
     
     <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodtempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodoconsequat. Duis aute irure dolor in reprehenderit in voluptate velit essecillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat nonproident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
+    <string name="new_game">New game</string>
+    <string name="searching">Searching…</string>
+    <string name="mission_completed">Mission completed</string>
+    <string name="finish">Okay</string>
+    <string name="description">Run, search and \ntalk with angry birds in your house</string>
+
 </resources>
